# templates

./: README.md  gitignore  gitlab-ci_create_docker_container.yml  index.css  index.html  py_gitignore  py_package_github_workflow.yml  pyproject.toml
