[project]
name = "project_name"
version = "0.1.0"
description = "project_description"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "name", email = "email"}
]
maintainers = [
    {name = "name", email = "email"}
]
keywords = ["foo", "bar"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",

    "Topic :: Text Processing",
    "Topic :: Utilities",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
homepage = "git_homepage"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

